Update Makefile and fix a few warnings

--- a/emulator/Makefile
+++ b/emulator/Makefile
@@ -7,10 +7,10 @@ OBJDIR := obj
 LIBSTOLINK :=
 INCLUDEDIRS :=
 
-CXX := g++
-CCEXT := cpp
-CCFLAGS := -g -std=c++11 -Wall -pedantic
-CCLINK := $(LIBSTOLINK) -lSDL2 -lSDL2_image -llua5.3 -lpthread
+CXX ?= g++
+CCEXT ?= cpp
+CCFLAGS ?= -g -std=c++11 -Wall -Wextra -Werror -pedantic
+CCLINK ?= $(LIBSTOLINK) -lSDL2 -lSDL2_image -llua5.3 -lpthread
 
 FILES := $(shell find $(SRCDIR) -name *.$(CCEXT))
 
@@ -29,7 +29,7 @@ $(OBJDIR)/%.$(CCEXT).o:
 	@cd $(RELATIVEPATH). && $(CXX) $(CCFLAGS) $(subst -I,-I$(RELBACK),$(INCLUDEDIRS)) -MM ./$(RELBACK)$(CPATH) > ./$(RELBACK)$(DPATH)
 	@mv -f $(DPATH) $(DPATH).tmp
 	@sed -e 's|.*:|$(OBJDIR)/$*.$(CCEXT).o:|' < $(DPATH).tmp > $(DPATH)
-	@sed -e 's/.*://' -e 's/\\$$//' < $(DPATH).tmp | fmt -1 | sed -e 's/^ *//' -e 's/$$/:/' >> $(DPATH)
+	@sed -e 's/.*://' -e 's/ .$$//' -e 's/^ *//' -e 's/ *$$//' -e 's/$$/:/' < $(DPATH).tmp >> $(DPATH)
 	@rm -f $(DPATH).tmp
 
 clean:
